# MyGraduationProject

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
chronicle/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py
health_data/: admin.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
health_data/migrations/: 0001_initial.py  0002_healthtip_alter_appointment_options_and_more.py  0002_initial.py  0003_message.py  0003_motivationvideo.py  0004_appointment.py  0005_remove_medication_reminder_time_and_more.py  0006_message_message_type_message_related_medication.py
messaging/: admin.py  forms.py  models.py  urls.py  views.py
messaging/migrations/: 0001_initial.py  0002_initial.py  0003_alter_appointment_doctor_alter_appointment_patient.py  0004_remove_message_receiver_remove_message_sender_and_more.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/core/: dashboard.html  emergency_contact_confirm_delete.html  emergency_contact_form.html  emergency_contact_list.html  health_tip_detail.html  health_tip_list.html  home.html  notification_detail.html  notification_list.html
templates/health_data/: appointment_confirm_delete.html  appointment_detail.html  appointment_form.html  appointment_list.html  daily_activity_form.html  exercise_delete.html  exercise_detail.html  exercise_form.html  exercise_list.html  health_tips.html  (+22 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
(+21 files in other folders)
