[project]
name = "chronicle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.2",
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.7",
    "django-allauth>=65.5.0",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-chartjs>=2.3.0",
    "django-crispy-forms>=2.3",
    "pillow>=11.1.0",
    "python-dotenv>=1.1.0",
    "redis>=6.1.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.1.3",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "I", # "Isort"
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "chronicle.settings"
